# evaluma

./: .gitignore  Makefile  README.md  pyproject.toml  results_and_parameters.csv
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  configuration.md  contributing.md  index.md  overview.md  references.md
docs/tutorials/: bayesian_comparison.md  frequentist_comparison.md  frequentist_vs_bayesian.md  index.md  iqm_ranking.md  performance_profiles.md
evaluma/: __init__.py  benchmark.py  cli.py  metric_registry.py  normalize.py  plot.py  results.py
evaluma/methods/: aggregate.py  bayesian.py  frequentist.py  iqm.py  profiles.py
tests/: conftest.py  test_aggregate.py  test_bayesian.py  test_benchmark.py  test_cli.py  test_frequentist.py  test_integration.py  test_iqm.py  test_load_df.py  test_load_metric_type_bounds.py  test_metric_registry.py  test_normalize.py  test_profiles.py  test_rliable_verification.py
tests/fixtures/: geobench_subset.csv  score_df.csv  score_df_lowerisbetter.csv  score_df_missing.csv  score_df_seeded.csv
